Meiri virkni og villumeðhöndlun, Blackjack 2/3 komið og hægt að double down núna