@@ -1,4 +1,5 @@
 package com.example.blackjack.Vinnsla;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -6,11 +7,8 @@ public class Deck {
     private List<Card> cards;
 
     public Deck(){
-        for(Suit suit : Suit.values()) {
-            for(Rank rank: Rank.values()){
-                cards.add(new Card(rank, suit));
-            }
-        }
+        cards = new ArrayList<>();
+        newDeck();
     }
 
     public void shuffle(){
@@ -21,10 +19,20 @@ public class Deck {
         if(cards.isEmpty()){
             throw new IllegalStateException("Deck empty");
         }
-        return cards.remove(cards.size() - 1);
+        return cards.removeLast();
     }
 
     public int size(){
         return cards.size();
+    }
+
+    public void newDeck() {
+        cards.clear();
+        for(Suit suit : Suit.values()) {
+            for(Rank rank: Rank.values()){
+                cards.add(new Card(rank, suit));
+            }
+        }
+
     }
 }
